feat: Update footer with current year and developer information

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       <button id="processXmlBtn">Processar XML</button>
       <pre id="output"></pre>
     </main>
-    <footer>&copy; 2024 TIMP Structure Generator</footer>
+    <footer>
+      &copy; 2025 TIMP Structure Generator |
+      Desenvolvido por <a href="https://github.com/switq" target="_blank">Guilherme Rodrigues</a>
+    </footer>
     <script src="script.js"></script>
     <script src="structureMap.js"></script>
   </body>
