feat: Update styles for improved user interface and accessibility

--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
         ser utilizada.
       </div>
 
+      <div class="alert alert-info mt-16">
+        <strong>Como utilizar:</strong>
+        <ul>
+          <li>
+            <b>Nome do nó:</b> Preencha com o nome do nó da view do HANA do qual
+            você deseja extrair a estrutura (por exemplo,
+            <code>Projection</code>). Esse nome deve ser exatamente igual ao
+            nome do nó no XML da view.
+          </li>
+          <li>
+            <b>XML:</b> Cole o XML copiado do HANA conforme o passo a passo
+            abaixo.
+          </li>
+          <li>Clique em <b>Processar XML</b> para gerar a estrutura.</li>
+        </ul>
+      </div>
+
       <div class="field mt-16">
         <h3>Como copiar o XML do HANA</h3>
         <ol>
