feat: Update application description to clarify functionality and purpose

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <header>
       <h1>TIMP Structure Generator</h1>
-      <p>Bem-vindo ao gerador de estruturas TIMP.</p>
+      <p>
+        Esta aplicação converte views do HANA em uma estrutura compatível com o TIMP, traduzindo automaticamente os campos e identificando quando são do tipo <code>TIMESTAMP</code>. A identificação é feita com base nas estruturas existentes, comparando os nomes dos campos (<code>hanaName</code>). O objetivo é acelerar a criação de novas views e reduzir a taxa de erros humanos durante o processo.
+      </p>
     </header>
     <main>
       <div class="field">
